--- a/clash.ini
+++ b/clash.ini
@@ -38,28 +38,29 @@ custom_proxy_group=🇨🇳 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`
 custom_proxy_group=🇸🇬 新加坡节点`url-test`(坡|新加坡|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🌍 其他地区`select`(^(?!.*(美国|日本|香港|台湾|新加坡)).*)
 custom_proxy_group=♻️ 手动切换`select`.*
-custom_proxy_group=📲 聊天软件`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]DIRECT
-custom_proxy_group=🎬 YouTube`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]DIRECT
-custom_proxy_group=🎬 NETFLIX`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🌍 其他地区`[]♻️ 手动切换`[]DIRECT
-custom_proxy_group=🎬 Prime`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]DIRECT
-custom_proxy_group=🎬 DisneyPlus`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]DIRECT
-custom_proxy_group=🎬 HBO GO`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]DIRECT
-custom_proxy_group=🎬 HBO MAX`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]DIRECT
-custom_proxy_group=🍎 AppleTV`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]DIRECT
-custom_proxy_group=🎬 EMBY`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`(Emby|emby)`[]♻️ 手动切换`[]DIRECT
-custom_proxy_group=🎬 日韩媒体`select`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]DIRECT
-custom_proxy_group=🎬 国外媒体`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]DIRECT
-custom_proxy_group=🎬 港台媒体`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]DIRECT
-custom_proxy_group=🌏 国外网站`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]DIRECT
-custom_proxy_group=🎵 Spotify`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]DIRECT
-custom_proxy_group=🎵 TikTok`select`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]DIRECT
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换
-custom_proxy_group=🧩 微软服务`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换
-custom_proxy_group=🎬 爱奇艺`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换
-custom_proxy_group=🎬 哔哩哔哩`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换
-custom_proxy_group=🌏 国内网站`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换
+custom_proxy_group=♻️ 自动切换`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=📲 聊天软件`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]♻️ 自动切换`[]DIRECT
+custom_proxy_group=🎬 YouTube`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]♻️ 自动切换`[]DIRECT
+custom_proxy_group=🎬 NETFLIX`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🌍 其他地区`[]♻️ 手动切换`[]♻️ 自动切换`[]DIRECT
+custom_proxy_group=🎬 Prime`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]♻️ 自动切换`[]DIRECT
+custom_proxy_group=🎬 DisneyPlus`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]♻️ 自动切换`[]DIRECT
+custom_proxy_group=🎬 HBO GO`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]♻️ 自动切换`[]DIRECT
+custom_proxy_group=🎬 HBO MAX`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]♻️ 自动切换`[]DIRECT
+custom_proxy_group=🍎 AppleTV`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]♻️ 自动切换`[]DIRECT
+custom_proxy_group=🎬 EMBY`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`(Emby|emby)`[]♻️ 手动切换`[]♻️ 自动切换`[]DIRECT
+custom_proxy_group=🎬 日韩媒体`select`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]♻️ 自动切换`[]DIRECT
+custom_proxy_group=🎬 国外媒体`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]♻️ 自动切换`[]DIRECT
+custom_proxy_group=🎬 港台媒体`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]♻️ 自动切换`[]DIRECT
+custom_proxy_group=🌏 国外网站`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]♻️ 自动切换`[]DIRECT
+custom_proxy_group=🎵 Spotify`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]♻️ 自动切换`[]DIRECT
+custom_proxy_group=🎵 TikTok`select`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 手动切换`[]♻️ 自动切换`[]DIRECT
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 自动切换`[]♻️ 手动切换
+custom_proxy_group=🧩 微软服务`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 自动切换`[]♻️ 手动切换
+custom_proxy_group=🎬 爱奇艺`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 自动切换`[]♻️ 手动切换
+custom_proxy_group=🎬 哔哩哔哩`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 自动切换`[]♻️ 手动切换
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 自动切换`[]♻️ 手动切换
+custom_proxy_group=🌏 国内网站`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 自动切换`[]♻️ 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🌍 其他地区`[]♻️ 自动切换`[]♻️ 手动切换
 
 
 enable_rule_generator=true
